--- a/src/app/style/_chat.scss
+++ b/src/app/style/_chat.scss
@@ -15,6 +15,18 @@ main {
     position: relative;
 }
 
+.message__content-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.message__file-wrapper-pdf {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
 .message {
     display: flex;
     gap: 20px;
